--- a/index.html
+++ b/index.html
@@ -1,285 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Portfolio</title>
+    <head>
+        <title>Portfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="Home style.css">
+        <link rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <body>
+            <div id="header">
+                <ul class="hpage">
+                    <li class="navpage" id="navhome">HOME</li>
+                    <li class="navpage" id="navprojects">PROJECTS</li>
+                    <li class="navpage" id="navaboutus">ABOUT US</li>
+                    <li class="navpage" id="navcontact">CONTACT</li>
 
-<!-- ===== CSS ===== -->
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
-    }
+                </ul>
+                <div class="container">
+                    <img src="/cover image.jpg"id="coverpage">
 
-    body {
-        line-height: 1.6;
-        background: #f4f4f4;
-        color: #333;
-    }
+                </div>
+                
+                    <i class="fa-solid fa-bars" style="color: rgb(237, 241, 248);position: absolute;right: -105px;top: 15px;"></i>
+                    <div class="social-icons">
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-twitter"></a>
+                        <a href="#" class="fa fa-linkedin"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                    </div>
+                    <div id="name">
+                        <p>Professional Photographer</p>
+                    </div>
+                        <div id="name2">
+                            <p> Hello, I Am Jane  </p>  
+                        </div>
+                        <div id="content">
+                            <p><h6>
+                                I am a passionate and creative photographer dedicated<br>
+                                to capturing moments that tell powerful stories.<br>
+                                With a keen eye for detail and a love for natural light, <br>
+                                I transform ordinary scenes into timeless visuals.<br>
+                                My work reflects emotion, elegance, and authenticity,,
+                                <br> whether it’s portraits, events, or creative shoots.<br>
+                                I believe every picture has a story to tell,<br>
+                                and my goal is to preserve<br>
+                                those stories through artistic and meaningful photography.</p> </h6>
+                        </div>
+                    <div>
+                        <a href="#projects" class="arc-button">
+    <span class="button-text">Projects</span>
+    <span class="arrow">→</span>
+</a>
+                    </div>
 
-    header {
-        background: #222;
-        color: #fff;
-        padding: 15px 0;
-        position: fixed;
-        width: 100%;
-        top: 0;
-        z-index: 1000;
-    }
-
-    .container {
-        width: 90%;
-        max-width: 1100px;
-        margin: auto;
-    }
-
-    nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    nav h1 {
-        font-size: 24px;
-    }
-
-    nav ul {
-        list-style: none;
-        display: flex;
-    }
-
-    nav ul li {
-        margin-left: 20px;
-    }
-
-    nav ul li a {
-        color: white;
-        text-decoration: none;
-        transition: 0.3s;
-    }
-
-    nav ul li a:hover {
-        color: #00adb5;
-    }
-
-    .menu-toggle {
-        display: none;
-        font-size: 24px;
-        cursor: pointer;
-    }
-
-    section {
-        padding: 80px 0;
-        min-height: 100vh;
-    }
-
-    #hero {
-        background: linear-gradient(to right, #00adb5, #393e46);
-        color: white;
-        display: flex;
-        align-items: center;
-        text-align: center;
-    }
-
-    #hero h2 {
-        font-size: 40px;
-        margin-bottom: 10px;
-    }
-
-    #hero p {
-        font-size: 18px;
-    }
-
-    .btn {
-        display: inline-block;
-        padding: 10px 20px;
-        margin-top: 15px;
-        background: #fff;
-        color: #00adb5;
-        text-decoration: none;
-        border-radius: 5px;
-        transition: 0.3s;
-    }
-
-    .btn:hover {
-        background: #222;
-        color: white;
-    }
-
-    #about, #projects, #contact {
-        background: white;
-        text-align: center;
-    }
-
-    .projects-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-        margin-top: 20px;
-    }
-
-    .project-card {
-        background: #f4f4f4;
-        padding: 20px;
-        border-radius: 8px;
-        transition: 0.3s;
-    }
-
-    .project-card:hover {
-        transform: translateY(-5px);
-        background: #e0e0e0;
-    }
-
-    footer {
-        text-align: center;
-        padding: 20px;
-        background: #222;
-        color: white;
-    }
-
-    /* Responsive */
-    @media(max-width: 768px) {
-        nav ul {
-            display: none;
-            flex-direction: column;
-            background: #222;
-            position: absolute;
-            top: 60px;
-            right: 0;
-            width: 200px;
-            padding: 20px;
-        }
-
-        nav ul.active {
-            display: flex;
-        }
-
-        .menu-toggle {
-            display: block;
-        }
-    }
-
-    /* Fade-in Animation */
-    .fade-in {
-        opacity: 0;
-        transform: translateY(20px);
-        transition: 1s;
-    }
-
-    .fade-in.visible {
-        opacity: 1;
-        transform: translateY(0);
-    }
-</style>
-</head>
-
-<body>
-
-<!-- ===== HEADER ===== -->
-<header>
-    <div class="container">
-        <nav>
-            <h1>MyPortfolio</h1>
-            <div class="menu-toggle">&#9776;</div>
-            <ul>
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-<!-- ===== HERO ===== -->
-<section id="hero">
-    <div class="container fade-in">
-        <h2>Hello, I'm John Doe</h2>
-        <p>A Web Developer passionate about building beautiful websites.</p>
-        <a href="#projects" class="btn">View My Work</a>
-    </div>
-</section>
-
-<!-- ===== ABOUT ===== -->
-<section id="about">
-    <div class="container fade-in">
-        <h2>About Me</h2>
-        <p>I am a front-end developer with experience in HTML, CSS, and JavaScript. 
-        I love creating interactive and responsive websites.</p>
-    </div>
-</section>
-
-<!-- ===== PROJECTS ===== -->
-<section id="projects">
-    <div class="container fade-in">
-        <h2>My Projects</h2>
-        <div class="projects-grid">
-            <div class="project-card">
-                <h3>Project One</h3>
-                <p>Simple responsive website.</p>
             </div>
-            <div class="project-card">
-                <h3>Project Two</h3>
-                <p>JavaScript interactive app.</p>
-            </div>
-            <div class="project-card">
-                <h3>Project Three</h3>
-                <p>Modern landing page design.</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- ===== CONTACT ===== -->
-<section id="contact">
-    <div class="container fade-in">
-        <h2>Contact Me</h2>
-        <p>Email: johndoe@email.com</p>
-    </div>
-</section>
-
-<!-- ===== FOOTER ===== -->
-<footer>
-    <p>&copy; 2026 John Doe | All Rights Reserved</p>
-</footer>
-
-<!-- ===== JavaScript ===== -->
-<script>
-    // Mobile Menu Toggle
-    const menuToggle = document.querySelector(".menu-toggle");
-    const navLinks = document.querySelector("nav ul");
-
-    menuToggle.addEventListener("click", () => {
-        navLinks.classList.toggle("active");
-    });
-
-    // Smooth Scrolling
-    document.querySelectorAll("nav ul li a").forEach(anchor => {
-        anchor.addEventListener("click", function(e) {
-            e.preventDefault();
-            document.querySelector(this.getAttribute("href"))
-                .scrollIntoView({ behavior: "smooth" });
-        });
-    });
-
-    // Fade-in on Scroll
-    const faders = document.querySelectorAll(".fade-in");
-
-    const appearOnScroll = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                entry.target.classList.add("visible");
-            }
-        });
-    }, { threshold: 0.3 });
-
-    faders.forEach(fader => {
-        appearOnScroll.observe(fader);
-    });
-</script>
-
-</body>
+        </body>
+    </head>
 </html>
+
