--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 </ul>
                 <div class="container">
-                    <img src="/cover image.jpg"id="coverpage">
+                    <img src="cover image.jpg"id="coverpage">
 
                 </div>
                 
